# requisitor

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
src/requisitor/: __init__.py  auth.py  codes.py  errors.py  handlers.py  headers.py  multipart.py  response.py  sentinel.py  session.py  utils.py
tests/: test_auth.py  test_init.py
tests/fixtures/: cacert.txt  cakey.pem
tests/handlers/: conftest.py  test_UnixHTTPHandler.py
tests/integration/: conftest.py  test_get.py
tests/unit/: test_errors.py  test_headers.py  test_multipart.py  test_response.py  test_session.py  test_utils.py
tests/unit/fixtures/: cacert.pem  multipart.txt
tests/unit/handlers/: test_HTTPErrorHandler.py  test_HTTPSClientAuthHandler.py  test_RedirectHandler.py  test_UnixHTTPConnection.py  test_UnixHTTPSConnection.py
