[metadata]
name = requisitor
version = 0.0.2
description = Simple Python HTTP library utilizing only Python stdlib
long_description = file: README.md
long_description_content_type = text/markdown
author = Matt Martz
author_email = matt@sivel.net
url = https://github.com/sivel/requisitor
project_urls =
    Bug Tracker=https://github.com/sivel/requisitor/issues
    Source Code=https://github.com/sivel/requisitor
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[bdist_wheel]
universal=1
